# lolzbot

./: Cargo.toml  README.md
migrations/create_commands/: up.sql
migrations/create_images/: up.sql
migrations/create_paginations/: up.sql
migrations/create_users/: up.sql
src/: config.rs  error.rs  macros.rs  main.rs  pagination.rs
src/commands/: broadcast_typing.rs  copy.rs  exception.rs  id.rs  image.rs  list.rs  mod.rs  ping.rs  prefix.rs  rename.rs  restart.rs  type.rs  upload.rs  uptime.rs
src/events/: mod.rs  on_message.rs  on_message_delete.rs  on_reaction_add.rs  on_reaction_remove.rs  on_ready.rs
